--- a/src/theme/scss/app.scss
+++ b/src/theme/scss/app.scss
@@ -1,8 +1,59 @@
 header {
   display: flex;
-  height: 50px;
-  width: 100%;
+  padding: 10px;
+  height: 30px;
   border-bottom: 1px solid #000;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgba(0, 0, 0, 0.5);
+  .search-bar {
+    display: flex;
+    position: relative;
+    margin: 100px;
+    input {
+      width: 200px;
+      border-radius: 20px;
+      padding: 5px 15px;
+      font-size: 16px;
+      font-weight: 500;
+      border: 1px solid #000;
+    }
+    .search-bar-result{
+      position: absolute;
+      width: 230px;
+      display: flex;
+      flex-direction: column;
+      top: 30px;
+      left: 0;
+      background-color: #fff;
+      border-radius: 20px;
+      border: 1px solid #000;
+      padding: 0px;
+      z-index: 99;
+      height: 250px;
+      overflow-y: scroll;
+      div{
+        text-align: center;
+        font-size: 12px;
+        cursor: pointer;
+        padding: 10px;
+        border-bottom: 1px solid #000;
+        &:last-child{
+          border-bottom: 0;
+        }
+        &:hover{
+          background-color: rgba(0, 0, 0, 0.1);
+          color: rgb(0, 0, 162);
+        }
+      }
+      .search-bar-no-result{
+        color: red;
+      }
+    }
+  }
+  .dark-mode-switch {
+    display: flex;
+  }
 }
 
 footer {
@@ -34,9 +85,8 @@ footer {
     width: 100%;
   }
   .big-card-image{
-    height: 150px;
-    width: 150px;
-    background-color: rgba(128, 0, 102, 0.8);
+    height: 50px;
+    width: 50px;
     border-radius: 20px;
     img {
       height: 100%;
@@ -58,6 +108,10 @@ footer {
 .small-card {
   display: flex;
   flex-direction: column;
+  img {
+    width: 50px;
+    height: 50px;
+  }
 }
 
 .loader {
