--- a/src/theme/scss/index.scss
+++ b/src/theme/scss/index.scss
@@ -7,5 +7,11 @@ body {
   &.dark-mode {
     background-color: #363062;
     color: #fff;
+    .big-card-text {
+      color: #fff;
+    }
+    .small-card-text {
+      color: #fff;
+    }
   }
 }
